--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 
 	<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+	<div id="status"></div>
+	
 	<script src="app.js"></script>
 </body>
 </html>
