--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 
-	<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
-	<div id="status"></div>
-	
+	<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+
 	<script src="app.js"></script>
 </body>
 </html>
